--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -29,8 +29,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    cursor: pointer;
-    padding: 15px 25px;
+    padding: 5px 20px;
+    min-height: 60px;
 }
 .posts .card_header .card_name{
     transform: translateY(3px);
